Headline overflows on IE 11 - flex bug (#59)

--- a/src/scss/themes/_standard.scss
+++ b/src/scss/themes/_standard.scss
@@ -34,6 +34,7 @@
 		display: flex;
 		flex-direction: column;
 		flex-grow: 1;
+		flex-basis: 100%;
 	}
 
 	.o-teaser__heading {
